Fixes project description layout bug when seeing list view

--- a/_sass/_list-project.scss
+++ b/_sass/_list-project.scss
@@ -182,7 +182,6 @@
   &.list {
     .project {
       height: 200px;
-      padding: 20px;
 
       .project-image {
         display: none;
